# ht-economics

./: .env  .gitignore  README.md  pyproject.toml
data/: 2023ffm2_jp.xlsx  27ffm2_jp.xlsx
ht_economics/: CobbDouglas.py  GDP.py  LaborShare.py
notebooks/: README.md  cobb-douglas-1.ipynb  cobb-douglas-2.ipynb  cobb-douglas-3.ipynb  cobb-douglas-4.ipynb  cobb-douglas-5.ipynb  cobb-douglas-6.ipynb  edinet.ipynb  gdp-1.ipynb  labor-share-1.ipynb  labor-share-2.ipynb
tests/: test_GDP.py
